# insta-plus-plus

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
include/camcontrol/: CameraController.h
src/: CMakeLists.txt  CameraController.cpp  CameraController.h  insta.cpp  insta.h  programatic_stream.cc
src/archive/: pipe-stream.cpp  pipe_streamv2.py  process_test.cpp  stream_process.cc
src/examples/: CMakeLists.txt  README.md  cameraSDKTest.cc  connect.cc  main.cpp  recording.cc  settings.cc  stream.cc
src/examples/camcontrol/: CMakeLists.txt  CameraController.cpp  README.md
src/examples/insta360/: CMakeLists.txt  README.md  cameraSDKTest.cc  connect.cc  recording.cc  settings.cc  stream.cc
src/playground/: equirectangular_convert.cpp  signal_slot.cpp
